# spectre-experiment

./: .gitignore  .gitmodules  .rustfmt.toml  Cargo.toml  README.md  rust-toolchain  spectre-experiment.code-workspace
node/: Cargo.toml
node/src/: chain_spec.rs  cli.rs  client.rs  command.rs  eth.rs  main.rs  service.rs
node/src/rpc/: mod.rs
pallets/spectre/: Cargo.toml  README.md
pallets/spectre/src/: lib.rs  tests.rs  util.rs
runtime/: Cargo.toml
runtime/src/: lib.rs  precompiles.rs  xcm_config.rs
runtime/src/integration_test/: mod.rs
runtime/src/integration_test_xcm/: mod.rs
tests/: moonwall.config.json  package.json  tsconfig.json
tests/configs/: spectreZombie.json
tests/scripts/: build-spec.sh  build-spect.sh  download-polkadot.sh
tests/suites/e2e/: test_e2e.ts
tests/suits/e2e/: spectreE2E.ts
tests/suits/integration/: spectreIntegration.ts
